plugins {
    id 'application'
    id "io.freefair.lombok" version '6.3.0'
}

group = 'CobraVerifier'
version = '0.0.1-SNAPSHOT'
description = 'CobraVerifier'

application {
    mainClass = 'Main'
}

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'net.openhft:zero-allocation-hashing:0.8'
    implementation 'io.grpc:grpc-netty-shaded:1.17.1'
    implementation 'io.grpc:grpc-protobuf:1.17.1'
    implementation 'io.grpc:grpc-stub:1.17.1'
    implementation 'org.postgresql:postgresql:42.2.5'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'info.picocli:picocli:4.6.3'
    implementation files('monosat/monosat.jar')

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

test {
    systemProperty "java.library.path", "$projectDir/monosat"
    jvmArgs += [ "-Xmx4096m" ]
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    systemProperty "java.library.path", "$projectDir/monosat"
}

jar {
    manifest {
        attributes 'Main-Class': 'Main'
    }

    duplicatesStrategy('exclude')
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
